# go-container

./: .gitignore  Dockerfile  docker-compose.example.yml  go.mod  go_app_creds.py  pyproject.toml  start  utils.py
